# hs-mapnik-wms

./: .gitignore  .gitmodules  .travis.yml  README.md  hs-mapnik-wms.cabal  stack-travis.yaml  stack.yaml
spec/Mapnik/: WMSSpec.hs
src/Mapnik/: WMS.hs
